added AccountService, updated security config